<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.mitallast</groupId>
    <artifactId>netty-queue</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <kotlin.version>1.3.41</kotlin.version>
        <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>

        <netty.version>4.1.38.Final</netty.version>
        <logback.version>1.1.7</logback.version>
        <slf4j.version>1.7.26</slf4j.version>
        <log4j2.version>2.12.0</log4j2.version>
        <jackson.version>2.9.9</jackson.version>
        <joda.version>2.10.3</joda.version>
        <javassist.version>3.25.0-GA</javassist.version>
        <google.guice.version>4.2.2</google.guice.version>
        <junit.version>4.12</junit.version>
        <unitils.version>3.4.6</unitils.version>
        <mockito.version>3.0.0</mockito.version>
        <uuid.version>3.4</uuid.version>
        <trove.version>3.0.3</trove.version>
        <typesafe.config.version>1.3.4</typesafe.config.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-jdk8</artifactId>
            <version>${kotlin.version}</version>
        </dependency>

        <!-- Core -->

        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>${netty.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.typesafe</groupId>
            <artifactId>config</artifactId>
            <version>${typesafe.config.version}</version>
        </dependency>
        <dependency>
            <groupId>org.conscrypt</groupId>
            <artifactId>conscrypt-openjdk</artifactId>
            <version>2.1.0</version>
            <classifier>${os.detected.classifier}</classifier>
        </dependency>
        <dependency>
            <groupId>com.sun.activation</groupId>
            <artifactId>javax.activation</artifactId>
            <version>1.2.0</version>
        </dependency>
        <dependency>
            <groupId>net.jpountz.lz4</groupId>
            <artifactId>lz4</artifactId>
            <version>1.3.0</version>
        </dependency>

        <!-- Logging -->

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j2.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-1.2-api</artifactId>
            <version>${log4j2.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-jul</artifactId>
            <version>${log4j2.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-jcl</artifactId>
            <version>${log4j2.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j2.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- JSON -->

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.9.9.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-joda</artifactId>
            <version>${jackson.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>${joda.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>${javassist.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>${google.guice.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.inject.extensions</groupId>
            <artifactId>guice-assistedinject</artifactId>
            <version>${google.guice.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.inject.extensions</groupId>
            <artifactId>guice-multibindings</artifactId>
            <version>${google.guice.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>net.sf.trove4j</groupId>
            <artifactId>trove4j</artifactId>
            <version>${trove.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- vavr -->

        <dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
            <version>0.10.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr-jackson</artifactId>
            <version>0.10.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- webjars -->

        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>bootstrap</artifactId>
            <version>3.3.7-1</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>angularjs</artifactId>
            <version>1.7.7</version>
        </dependency>
        <dependency>
            <groupId>org.webjars.bower</groupId>
            <artifactId>angular-websocket</artifactId>
            <version>2.0.0</version>
        </dependency>

        <!-- test -->

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.unitils</groupId>
            <artifactId>unitils-core</artifactId>
            <version>${unitils.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- bench -->

        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
            <version>1.21</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
            <version>1.21</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>eaio.com</id>
            <url>http://eaio.com/maven2</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <artifactId>kotlin-maven-plugin</artifactId>
                <groupId>org.jetbrains.kotlin</groupId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <sourceDirs>
                                <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
                                <sourceDir>${project.basedir}/src/main/java</sourceDir>
                            </sourceDirs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                        <configuration>
                            <sourceDirs>
                                <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
                                <sourceDir>${project.basedir}/src/test/java</sourceDir>
                            </sourceDirs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <!-- Replacing default-compile as it is treated specially by maven -->
                    <execution>
                        <id>default-compile</id>
                        <phase>none</phase>
                    </execution>
                    <!-- Replacing default-testCompile as it is treated specially by maven -->
                    <execution>
                        <id>default-testCompile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>java-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>java-test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <showDeprecation>true</showDeprecation>
                    <compilerArgument>-Xlint:unchecked,deprecation,fallthrough,finally</compilerArgument>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>org.mitallast.queue.Main</mainClass>
                        </manifest>
                    </archive>
                    <finalName>netty-queue</finalName>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>leader</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-server</argument>
                                <argument>-d64</argument>
                                <argument>-Xms1g</argument>
                                <argument>-Xmx1g</argument>
                                <argument>-Dfile.encoding=UTF-8</argument>
                                <argument>-Djava.net.preferIPv4Stack=true</argument>
                                <argument>-XX:+UseParNewGC</argument>
                                <argument>-XX:+UseConcMarkSweepGC</argument>
                                <argument>-XX:CMSInitiatingOccupancyFraction=75</argument>
                                <argument>-XX:+UseCMSInitiatingOccupancyOnly</argument>
                                <argument>-XX:MaxGCPauseMillis=150</argument>
                                <argument>-XX:InitiatingHeapOccupancyPercent=70</argument>
                                <argument>-XX:NewRatio=2</argument>
                                <argument>-XX:SurvivorRatio=8</argument>
                                <argument>-XX:MaxTenuringThreshold=15</argument>
                                <argument>-XX:+UseCompressedOops</argument>
                                <argument>-XX:+AggressiveOpts</argument>
                                <argument>-XX:+UseFastAccessorMethods</argument>
                                <argument>-XX:-MaxFDLimit</argument>
                                <argument>-Dio.netty.leakDetectionLevel=disabled</argument>
                                <argument>-Draft.bootstrap=true</argument>
                                <argument>-Dtransport.port=8900</argument>
                                <argument>-Drest.port=8800</argument>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>org.mitallast.queue.Main</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>follower</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-server</argument>
                                <argument>-d64</argument>
                                <argument>-Xms1g</argument>
                                <argument>-Xmx1g</argument>
                                <argument>-Dfile.encoding=UTF-8</argument>
                                <argument>-Djava.net.preferIPv4Stack=true</argument>
                                <argument>-XX:+UseParNewGC</argument>
                                <argument>-XX:+UseConcMarkSweepGC</argument>
                                <argument>-XX:CMSInitiatingOccupancyFraction=75</argument>
                                <argument>-XX:+UseCMSInitiatingOccupancyOnly</argument>
                                <argument>-XX:MaxGCPauseMillis=150</argument>
                                <argument>-XX:InitiatingHeapOccupancyPercent=70</argument>
                                <argument>-XX:NewRatio=2</argument>
                                <argument>-XX:SurvivorRatio=8</argument>
                                <argument>-XX:MaxTenuringThreshold=15</argument>
                                <argument>-XX:+UseCompressedOops</argument>
                                <argument>-XX:+AggressiveOpts</argument>
                                <argument>-XX:+UseFastAccessorMethods</argument>
                                <argument>-XX:-MaxFDLimit</argument>
                                <argument>-Dio.netty.leakDetectionLevel=disabled</argument>
                                <argument>-Draft.discovery.nodes.0=0.0.0.0:8900</argument>
                                <argument>-Dtransport.port=8901</argument>
                                <argument>-Drest.port=8801</argument>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>org.mitallast.queue.Main</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <rulesUri>file://${basedir}/rules.xml</rulesUri>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>3.0.4</version>
            </plugin>
        </plugins>
        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>1.5.0.Final</version>
            </extension>
        </extensions>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>3.0.4</version>
                <configuration>
                    <effort>Max</effort>
                    <threshold>Low</threshold>
                    <xmlOutput>true</xmlOutput>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

</project>